fixed styling bug

--- a/src/app/client/dashboard/informations/informations.component.css
+++ b/src/app/client/dashboard/informations/informations.component.css
@@ -3,6 +3,7 @@
     padding-left: 40px; /* Adjust the padding-left value according to the width of the flag container */
   }
 
-  .telStyle{
-    margin-top: 8px;
+  .border-control{
+    border: none !important;
+    margin-top: -5px;
   }
