--- a/src/app/client/dashboard/informations/informations.component.html
+++ b/src/app/client/dashboard/informations/informations.component.html
@@ -47,7 +47,7 @@
             <div class="col-md-6 telStyle">
                 <label for="phoneNumber" name="phoneNumber" id="phoneNumber" class="form-label">Téléphone</label><span class="required">*</span>
                 <!-- Add the ngx-intl-tel-input component here -->
-                <ngx-intl-tel-input formControlName="phoneNumber"  class="form-control"
+                <ngx-intl-tel-input formControlName="phoneNumber"  class="form-control border-control"
                     [preferredCountries]="['tn']"
                     [enablePlaceholder]="true"
                     [cssClass]="'form-control'"
