sign in adjustment

--- a/src/app/client/dashboard/adresse/adresse.component.html
+++ b/src/app/client/dashboard/adresse/adresse.component.html
@@ -6,8 +6,11 @@
     <div class="card-body">
         <form class="row g-3" #addressForm="ngForm" (ngSubmit)="saveAddress(addressForm)">
             <div class="col-12">
-                <label for="country">Entrer votre pays </label><span class="required">*</span>
-                <input type="text" id="country" name="country" (change)="locateCountry()" [(ngModel)]="address.country" required>
+                <label for="country" class="form-label">Entrer votre pays </label><span class="required">*</span>
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-flag-fill"></i></span>
+                    <input type="text" id="country" name="country" (change)="locateCountry()" [(ngModel)]="address.country" class="form-control" required>
+                </div>
             </div>
 
             <div class="map-container">
@@ -20,16 +23,26 @@
             </div>
             <div class="col-md-6">
                 <label for="city">Ville</label><span class="required">*</span>
-                <input type="text" id="city" name="city" #villeInput [(ngModel)]="address.city">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-building"></i></span>
+                    <input type="text" id="city" name="city" #villeInput [(ngModel)]="address.city" class="form-control">
+                </div>
             </div>
             
             <div class="col-md-6">
                 <label for="neighbourhood">Quartier</label>
-                <input type="text" id="neighbourhood" name="neighbourhood" [(ngModel)]="address.neighbourhood">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-house"></i></span> <!-- Icon added to the input group -->
+                    <input type="text" id="neighbourhood" name="neighbourhood" [(ngModel)]="address.neighbourhood" class="form-control">
+                </div>  
             </div>
             <div class="col-md-6">
                 <label for="zipCode">Code ZIP</label>
-                <input type="text" id="zipCode" name="zipCode"  [(ngModel)]="address.zipCode">
+
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-envelope"></i></span> <!-- Icon added to the input group -->
+                    <input type="text" id="zipCode" name="zipCode"  [(ngModel)]="address.zipCode" class="form-control">                                
+                </div>   
             </div>
             <div class="col-12">
                 <div class="row">
