--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -31,8 +31,8 @@
                         <input type="submit" value="Login">
                         <div class="col-md-12"> 
                             <ul class="social-network social-circle"> 
-                                <li><a href="#" class="icoFacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a></li> 
-                                <li><a href="#" class="icoTwitter" title="Twitter"><i class="fab fa-twitter"></i></a></li> 
+                                <li><a href="#" class="icoWhatsapp" title="Whatsapp"><i class="fab fa-whatsapp"></i></a></li> 
+                                <li><a href="#" class="icoSMS" title="SMS"><i class="fab fa-viber"></i></a></li> 
                                 <li><a href="#" class="icoGoogle" title="Google +"><i class="fab fa-google-plus"></i></a></li> 
                             </ul> 
                         </div> 
