--- a/src/assets/css/plugins.css
+++ b/src/assets/css/plugins.css
@@ -25173,6 +25173,10 @@ section.md {
 .banner{
     background-image: url("../img/banner/slide1.png")!important;
 }
+.banner12{
+    background-image: url("../img/banner/slide2.png")!important;
+
+}
 .banner2{
     background-image: url("../img/bg/bg-01.jpg")!important;
 }
