--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -189,8 +189,9 @@ a:hover,a:active {
 }
 
 .homebtn{
-    background: linear-gradient(90deg, #212529, #575c61) !important; 
-    border: #212529 !important;
+    background: linear-gradient(90deg, #8f7134, #cca558) !important; 
+    border: #B48F44 !important;
+    text-decoration: none !important;
 }
 
 .butn:before {
@@ -200,7 +201,7 @@ a:hover,a:active {
     left: 0;
     bottom: 0;
     right: 0;
-    background: rgba(97, 97, 97, 0.5);
+    background:linear-gradient(90deg,  #cca558, #8f7134);
     transform-origin: right center;
     transform: scale(0, 1);
     transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
