--- a/src/app/client/dashboard/adresse/adresse.component.html
+++ b/src/app/client/dashboard/adresse/adresse.component.html
@@ -47,10 +47,10 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
-                        <button class="btn btn-secondary butn" (click)="Retour()">Retour</button>
+                        <button class="btn btn-secondary butn" (click)="Retour('adresse')">Retour</button>      
                     </div>
                     <div class="col text-end">
-                        <button class="btn btn-secondary butn" (click)="Suivant()">Suivant</button>
+                        <button class="btn btn-secondary butn" (click)="Suivant('autres-informations')" >Suivant</button>
                     </div>
                 </div>
             </div>
