--- a/src/app/client/dashboard/autres-informations/autres-informations.component.html
+++ b/src/app/client/dashboard/autres-informations/autres-informations.component.html
@@ -81,10 +81,10 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
-                        <button class="btn btn-secondary butn" (click)="Retour()">Retour</button>
+                        <button class="btn btn-secondary butn" (click)="Retour('autres-informations')">Retour</button>
                     </div>
                     <div class="col text-end">
-                        <button class="btn btn-secondary butn" (click)="Suivant()">Suivant</button>
+                        <button class="btn btn-secondary butn" (click)="Suivant('offres-et-domicialisation')" >Suivant</button>
                     </div>
                 </div>
             </div>
