--- a/src/app/client/dashboard/informations/informations.component.html
+++ b/src/app/client/dashboard/informations/informations.component.html
@@ -87,8 +87,9 @@
                         <button class="btn btn-secondary butn" (click)="Retour()">Retour</button>
                     </div>
                     <div class="col text-end">
-                        <button class="btn btn-secondary butn" (click)="Suivant()" [disabled]="!isFormValid()">Suivant</button>
-
+                            <button class="btn btn-secondary butn" (click)="Suivant('adresse')" [disabled]="!isFormValid()">Suivant</button>
+                        
+                        
                     </div>
                 </div>
             </div>
