--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
@@ -23,7 +23,7 @@
                     
                 </div>
             </div>
-            <button type="button" class="btn btn-secondary butn" (click)="Suivant()">Envoyer</button>
+            <button type="button" class="btn btn-secondary butn" (click)="Suivant('validation')">Envoyer</button>
         </form>
     </div>
 </div>
