--- a/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
+++ b/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
@@ -18,6 +18,7 @@
                                 <option value="AGENCE_TUNIS">AGENCE DE TUNIS</option>
                                 <option value="AGENCE_SFAX">AGENCE_SFAX</option>
                                 <option value="AGENCE_DJERBA">AGENCE DE DJERBA</option>
+                                <option value="AGENCE_GABES">AGENCE DE GABES</option>
                             </select>
                         </div>
                         <div *ngIf="offerForm.get('agencyName')?.invalid && (offerForm.get('agencyName')?.dirty || offerForm.get('agence')?.touched)" class="text-danger" style="margin-top: 3px;">
@@ -62,10 +63,10 @@
         <div class="col-12">
             <div class="row">
                 <div class="col text-start">
-                    <button class="butn" (click)="Retour()">Retour</button>
+                    <button class="btn btn-secondary butn" (click)="Retour()">Retour</button>
                 </div>
                 <div class="col text-end">
-                    <button class="butn" (click)="Suivant()">Suivant</button>
+                    <button class="btn btn-secondary butn" (click)="Suivant()">Suivant</button>
                 </div>
             </div>
         </div>
