--- a/src/app/client/dashboard/validation/validation.component.css
+++ b/src/app/client/dashboard/validation/validation.component.css
@@ -12,3 +12,25 @@ input {
 .otpverify{
 	display: none;
 }
+
+.alert-danger {
+	width: max-content;
+    border-radius: 8px;
+	margin-top: 32px;
+    color: rgb(255, 255, 255);
+    font-size: small;
+    background-color: rgb(163 135 76 / 80%) !important;
+    margin-bottom: 10px;
+	margin-left: 15px !important;
+  }
+
+  .alert {
+    --bs-alert-bg: transparent;
+    --bs-alert-padding-x: 0.8rem !important; 
+    --bs-alert-padding-y: 0.3rem !important;
+  
+  }
+
+  .btn.btn-secondary.butn{
+	margin-left: 15px !important;
+  }
