--- a/src/app/client/password/password.component.css
+++ b/src/app/client/password/password.component.css
@@ -75,9 +75,6 @@ body, html {
 }
 
 
-
-
-.box input[type="login"],
 .box input[type="emailreset"] {
     border: 0;
     background: none;
@@ -86,7 +83,7 @@ body, html {
     text-align: center;
     border: 2px solid #e3e5e6;
     padding: 10px 10px;
-    width: 350px;
+    width: 250px;
     outline: none;
     color: white;
     border-radius: 24px;
@@ -100,8 +97,7 @@ body, html {
     font-size: 40px; 
 }
 
-.box input[type="login"]:focus,
-.box input[type="password"]:focus {
+.box input[type="emailreset"]:focus {
     width: 300px;
     border-color: #C2862D
 }
@@ -129,70 +125,6 @@ body, html {
     text-decoration: underline
 }
 
-ul.social-network {
-    list-style: none;
-    display: inline;
-    margin-left: 0 !important;
-    padding: 0
-}
-
-ul.social-network li {
-    display: inline;
-    margin: 0 5px
-}
-
-.social-network a.icoFacebook:hover {
-    background-color: #3B5998
-}
-
-.social-network a.icoTwitter:hover {
-    background-color: #33ccff
-}
-
-.social-network a.icoGoogle:hover {
-    background-color: #BD3518
-}
-
-.social-network a.icoFacebook:hover i,
-.social-network a.icoTwitter:hover i,
-.social-network a.icoGoogle:hover i {
-    color: #fff
-}
-
-a.socialIcon:hover,
-.socialHoverClass {
-    color: #44BCDD
-}
-
-.social-circle li a {
-    display: inline-block;
-    position: relative;
-    margin: 0 auto 0 auto;
-    border-radius: 50%;
-    text-align: center;
-    width: 50px;
-    height: 50px;
-    font-size: 20px
-}
-
-.social-circle li i {
-    margin: 0;
-    line-height: 50px;
-    text-align: center
-}
-
-.social-circle li a:hover i,
-.triggeredHover {
-    transform: rotate(360deg);
-    transition: all 0.2s
-}
-
-.social-circle i {
-    color: #fff;
-    transition: all 0.8s;
-    transition: all 0.8s
-}
-
 .box-text{
     color: white;
     font-size: small;
@@ -211,3 +143,16 @@ a.socialIcon:hover,
     --bs-alert-padding-y: 0.3rem !important;
   
   }
+
+  #banner13 {
+    position: relative;
+    background-image: url("../../../assets/img/banner/slide3.jpg")!important;
+    height: 100vh; /* 100% viewport height */
+    width: 100%; /* 100% width of viewport */
+    background-size: cover; /* Cover the entire container */
+    background-position: center; /* Center the background image */
+    background-repeat: no-repeat; /* Do not repeat the background image */
+    opacity: 0.8; /* Set the opacity level */
+    margin-bottom: 0; /* Ensure no bottom margin */
+
+}
