--- a/src/app/client/password/password.component.html
+++ b/src/app/client/password/password.component.html
@@ -1,4 +1,4 @@
-<section id="topbar" class="d-flex align-items-center">
+  <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@bfibank.com</a>
@@ -13,7 +13,7 @@
     </div>
   </section>
 
-  <section id="banner" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.png">
+  <section id="banner13" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.png">
     <div class="container d-flex flex-column">
         <div class="row align-items-center min-vh-80">
             <div class="row"> 
@@ -21,31 +21,23 @@
                      <div>
                       <form (ngSubmit)="onSubmitReset()" #loginForm="ngForm" class="box">
                         <p class="box-text">Entrez votre Email pour réinitialiser votre mot de passe.</p> 
-                        <input type="emailreset" id="emailreset" name="emailreset" [(ngModel)]="emailreset" placeholder="Votre Email"> 
-                       
+                        <input type="emailreset" id="emailreset" name="emailreset" [(ngModel)]="emailreset" placeholder="Votre Email">   
                         <input type="submit" value="Reset">
-                        <div class="col-md-12"> 
-                            <ul class="social-network social-circle"> 
-                                <li><a href="#" class="icoFacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a></li> 
-                                <li><a href="#" class="icoTwitter" title="Twitter"><i class="fab fa-twitter"></i></a></li> 
-                                <li><a href="#" class="icoGoogle" title="Google +"><i class="fab fa-google-plus"></i></a></li> 
-                            </ul> 
-                        </div> 
-                    </form>
-                            </div> 
-                          </div> 
-                        </div>
+                      </form>
+                      </div> 
+                </div> 
+            </div>
         </div>
-        </div>
+    </div>
+  </section>
 
-</section>
-<section id="copyright" class="d-flex align-items-center">
+  <section id="copyright" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
         <div id="copyright-content">
             <i class="bi bi-c-circle"></i>
             <span>{{ currentYear }}</span> BFI bank
         </div>
     </div>
-</section>
+  </section>
 
 
