added recaptcha v2 in password reset form

--- a/src/app/client/password/password.component.css
+++ b/src/app/client/password/password.component.css
@@ -129,20 +129,12 @@ body, html {
     color: white;
     font-size: small;
 }
-.alert-danger {
-    color: rgb(255, 255, 255);
-    font-size: small;
-    background-color: rgb(110, 40, 40) !important;
-    margin-bottom: 10px;
-    border-radius: inherit;
-  }
 
-  .alert {
-    --bs-alert-bg: transparent;
-    --bs-alert-padding-x: 0.8rem !important; 
-    --bs-alert-padding-y: 0.3rem !important;
-  
-  }
+.placeholder{
+    color: white !important;
+}
+
+
 
   #banner13 {
     position: relative;
@@ -156,3 +148,4 @@ body, html {
     margin-bottom: 0; /* Ensure no bottom margin */
 
 }
+
