--- a/src/app/client/password/password.component.html
+++ b/src/app/client/password/password.component.html
@@ -15,21 +15,35 @@
 
   <section id="banner13" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.png">
     <div class="container d-flex flex-column">
-        <div class="row align-items-center min-vh-80">
-            <div class="row"> 
-                <div class="col-md-6">
-                     <div>
-                      <form (ngSubmit)="onSubmitReset()" #loginForm="ngForm" class="box">
-                        <p class="box-text">Entrez votre Email pour réinitialiser votre mot de passe.</p> 
-                        <input type="emailreset" id="emailreset" name="emailreset" [(ngModel)]="emailreset" placeholder="Votre Email">   
-                        <input type="submit" value="Reset">
-                      </form>
-                      </div> 
-                </div> 
+      <div class="row align-items-center min-vh-80">
+        <div class="col-md-6">
+          <div class="box">
+            <div *ngIf="!captchaVerified">
+              <ngx-recaptcha2 #captchaElem
+                [siteKey]="siteKey"
+                (success)="handleSuccess($event)"
+                [useGlobalDomain]="false"
+                formControlName="recaptcha">
+              </ngx-recaptcha2>
             </div>
-        </div>
+            
+            <div *ngIf="captchaVerified">
+              <p class="box-text">Entrez votre Email pour réinitialiser votre mot de passe.</p>
+              <form (ngSubmit)="onSubmitReset()" [formGroup]="passwordResetForm" class="form-group">
+                <div class="form-group">
+                  <input class="box-text" type="emailreset" id="emailreset" name="emailreset" formControlName="emailreset" placeholder="Votre Email" class="form-control">
+                </div>
+                <input type="submit" value="Reset">
+              </form>
+            </div>
+          
+          </div>
+        </div> 
+      </div>
     </div>
   </section>
+  
+  
 
   <section id="copyright" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
